Buscador películas y canciones listo

--- a/ProyectoEquipo13/Proyecto equipo 13 entrega 3/AppForm.resx
+++ b/ProyectoEquipo13/Proyecto equipo 13 entrega 3/AppForm.resx
@@ -1263,6 +1263,37 @@
         AAAAAAAAAAAAAAAAH//Z
 </value>
   </data>
+  <data name="buttonCerrar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        /9j/4AAQSkZJRgABAQEAAAAAAAD/2wBDAAMCAgMCAgMDAwMEAwMEBQgFBQQEBQoHBwYIDAoMDAsKCwsN
+        DhIQDQ4RDgsLEBYQERMUFRUVDA8XGBYUGBIUFRT/2wBDAQMEBAUEBQkFBQkUDQsNFBQUFBQUFBQUFBQU
+        FBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBT/wAARCAAyADIDASIAAhEBAxEB/8QA
+        HAAAAgIDAQEAAAAAAAAAAAAAAAkFCAYHCgID/8QAMRAAAQMDAwMBBwQCAwAAAAAAAQIDBAUGEQAHCBIh
+        MQkTFCIyQVFhFUJxgRZSM0Nz/8QAFAEBAAAAAAAAAAAAAAAAAAAAAP/EABQRAQAAAAAAAAAAAAAAAAAA
+        AAD/2gAMAwEAAhEDEQA/AGk1SqQ6JTZVQqEpmDAiNKfkSpLgbbZbSCVLUo9kpABJJ8Y0qXlp6wVSdqc2
+        2tj2WokFpRaXd09gOOvEdsxmVjpSn7LcBJz8qfJPWC5aTHa2zsfbU1TEGO23MuVxlWC84oBbMU4/alJS
+        4ofUqR/qcq70GaX5vXuBuhMclXbelduF1wkkVCoOuoT+EoKulI/AAGoO3L0uCzpiJdArtTocpByl+mzH
+        I6wfuFIIOofUzUbKuGj2/Tq9PoNTg0OpKUmFU5MNxuNKKfmDTpASsj69JONBczjf6su6m1FQi0+/H17j
+        2tkJc99ITUmE/VTcj/sI84d6s+OpPnTi9md6LR39sKBeFlVVFUo8r4T26XY7oA6mnUeULTkZB+4IyCCe
+        Y/VnOAPLGdxd3rgOzJixY1ddbhV2KpR9mhBOESQPoponqz5KetP1GA6DNGvKFpcQlaFBSFDIUk5BH30a
+        DmN3rvyRuhu/el2ynC67WavKmgk56ULdUUJH4SnpSPwBqS2Q483/AMirn/Q7Dt2TWZCCn3mSB0RYiT4U
+        86r4UDscAnJwcAntrEb0tyRZ1412gS0FEqlT34LyVeQtpxSFA/2k6sjwi57V/h7MqFM/RI1x2dVpKZM6
+        CVeylNuBIR7Rl3uM9IGUqBB6RgpyToGEcV/SXsPaT3OvbkuMbhXUjDghLbIpUVf4bV3fI+7g6T/oCM62
+        1z54q1zlZsrQ7LtSoUmhyqdXGKl7Spe0QyGW40hroT7NCiDl5GBjGEn8az7j3yv205OUT36yK+3ImtoC
+        5VFl4ZnxP/RonJGe3WkqQT4UdfbkryYtLirYkG7byYqcilzKk3S200phDzoeW064CQpaB09LK++fOO2g
+        UdvF6S+6Ozu2VxXtMua1arBoURc6TFhPyA8ppHdZR1spSSBk4JGcHHfANIdNt5L+q7tDuhsJfVn27SLq
+        crNepT1OjmbCZZZQXU9JWtQeUQACTgA5wB2zkKS0DR9rvVOl2ltnaNDlNsypNMpESE6+6MrcW2yhClKP
+        1JKSTo1WWy+BN73jZ1Cr8SmyVxarAYnMqSg4KHW0rSR/Sho0GcerLxvl7Ub+v35T4qv8WvZRl+2Qn4GK
+        gAPeG1H6Ff8AyjPnrXj5TqjWunDenZm1t/duqrZV4QPfqPPR8yCEux3R8jzSsHpWk9wf5BBBIKK+WPAH
+        cji7Vpkx2A9c9jBZMe5acyVNoRnsJKBksK8efhJ+VR8AK625ctXs+tw6zQqnLo1WhrDkedAfUy8yr7pW
+        kgg/xrd2+3OTdPkfthQLGvmdT6jT6PME8TWYYalynktrbQp5QPSelLix8KU56snJwdV/0aA1svjjsbWe
+        Rm8duWLRkLCqg+DMlJTkRIqSC88r6YSnOM+VFKfJGjY3jjuFyMuVFGsW3JNVUFhMiepJbhxAf3PPH4UD
+        HfHzHHwgntp5nCrhVbfEKynWWXUVq9KohJq9dKOnrx3DDIPdLST/AGo/Er9qUhYG3qBBtWgUyi0xhMWm
+        02K1DisJ8NtNoCEJH8JSBo1IaNAa8rQlxCkLSFIUMFKhkEfbRo0CoPVO2usy0qg3Kodo0KjSX2g489T6
+        aywtxZ8qUpCQSfydVl4E2Xb947pU2JX6FTK5FW+kKYqUNuQgjPgpWCNGjQProFvUq1aUxTKLTIdIprA6
+        WYcBhDDLY+yUJAA/oakNGjQGjRo0H//Z
+</value>
+  </data>
   <data name="axWindowsMediaPlayer1.OcxState" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
